<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FriendlyWager</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="divider"> | </string>
    <string name="welcome">Welcome To Friendly Wager!</string>
    <string name="createWager">Create New Wager</string>
    <string name="findWager">Find Existing Wager</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="newWagerString">Wager Name</string>
    <string name="newWagerLocation">Location</string>
    <string name="newWagerTime">Time</string>
    <string name="newWagerFinish">Finish</string>
    <string name="newWagerCancel">Cancel</string>
    <string name="newWagerNote">(note: votes will be hidden until after voting closes when the event begins)</string>
    <string name="newWagerTimeSelect">Select a Time</string>
    <string name="newWagerDateSelect">Select a Date</string>
    <string name="viewWagerVote">Vote:</string>
    <string name="viewWagerInvite">Invite</string>
    <string name="viewWagerAdminInviteLabel">Invite</string>
    <string name="registerUsername">Username</string>
    <string name="registerPassword">Password</string>
    <string name="registerEmail">Email Address</string>
    <string name="loginForgotPassword">Forgot Password</string>
    <string name="friendlyWagerBanner">FriendlyWager</string>
    <string name="newWagerDate">Date</string>
    <string name="refresh">Refresh</string>
    <string name="welcomeOpenedWagersLabel">Opened Wagers:</string>
    <string name="welcomeClosedWagersLabel">Closed Wagers:</string>
    <string name="viewWagerResults">View Responses</string>
    <string name="viewClosedWagerResult">Wager Result:</string>
    <string name="viewClosedWagerUpdateResult">Update Result</string>
    <string name="viewWagerVoteButton">Vote</string>
    <string name="viewWagerDoneButton">Done</string>

</resources>