<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/viewWagerAdminText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewWagerVote"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/viewWagerAdmin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/viewWagerAdminInviteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewWagerAdminInviteLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/viewWagerInviteText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/viewWagerInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewWagerInvite"
        android:onClick="onInviteClicked" />

</LinearLayout>