<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/viewWagerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wager Name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/viewWagerDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wager Details"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/viewWagerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewWagerVote"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/viewClosedWagerVoteText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="false" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewClosedWagerResult"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/viewClosedWagerResultText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="false" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onViewResponsesClicked"
        android:text="@string/viewWagerResults" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onDoneClicked"
        android:text="@string/viewWagerDoneButton" />

</LinearLayout>