<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/welcome" />
    
    <Button
        android:id="@+id/createwager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createWager" 
        android:onClick="onCreateWagerClicked" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeOpenedWagersLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#CCCCB2" />
    
    <ListView
        android:id="@+id/showOpenWagersList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ListView>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeClosedWagersLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#CCCCB2" />
    
    <ListView
        android:id="@+id/showClosedWagersList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <!-- 
    <Button
        android:id="@+id/findwager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/findWager" 
        android:onClick="onFindWagerClicked" />
    
    <Button
        android:id="@+id/logout"
        android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
        android:onClick="onLogoutClicked"
        android:text="@string/logout" />
    
    <Button
        android:id="@+id/help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help" 
        android:onClick="onHelpClicked" /> -->

</LinearLayout>